# master-thesis-codebase

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  2022_10_06_traceback_brique_error.txt  JOURNAL.md  README.md  TODO.md  do.py  install_requirements.py  pyproject.toml  run.py
binarization/: 01-unet.py  02-unet.py  another_unet.py  config.py  config_default.py  dataset.py  datatools.py  future_main.py  future_training.py  models.py  new_config.py  old_models.py  train.py  training.py  traintools.py  utils.py  video_preprocessing.py  videotools.py
binarization/conf/: config.yaml
binarization/models/: __init__.py  common.py  discriminator.py  modeltools.py  srunet.py  unet.py
binarization/vaccaro/: data_loader.py  evaluate_model.py  models.py  pytorch_unet.py  render.py  train.py  utils.py
binarization/vaccaro/pytorch_ssim/: __init__.py
data/: splits.json
experiments/: 2022_07_18.py
notebooks/: 2023_02_28_model_evaluation.ipynb  2023_02_28_visualize_quantitative_results.ipynb  2023_04_01_qualitative_results.ipynb
outputs/: 2023_02_28_results.csv
outputs/2022-07-01/16-55-28/.hydra/: config.yaml  hydra.yaml
scripts/: TRTprep.py  compute_qualitative_results.py  compute_quantitative_results.py  compute_vmaf.py  compute_vmaf.sh  copy_evaluate_model.py  dataprep.py  eval.py  eval_image.py  eval_video.py  eval_vmaf.py  launch_mlflow.sh  make_video_comparison.py  map_weight_keys.py  old_eval_video.py  prepare_symlinks.sh  prepare_tensorrt.py  remove_prefix.py  run_not_only_tests.py  testing_tensorrt.py  video_preprocessing.py
tests/: test_dataprep.py  test_dataset.py  test_datatools.py  test_models.py  test_train.py  test_video_preprocessing.py
