[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py38']
include = '\*.py$'

[tool.poetry]
name = "binarization"
version = "0.1.0"
description = "Lorenzo Palloni - Master's thesis"
authors = ["Lorenzo Palloni <palloni.lorenzo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"
torch = "^1.11.0"
torchvision = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
docformatter = "^1.4"
coverage = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

